# msg-reader

./: .editorconfig  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  eslint.config.js  index.html  jest.config.cjs  jest.config.js  msgreader.backup.js  msgreader.js  package-lock.json  package.json  styles.css  tailwind.config.cjs  vite.config.js
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  tauri-build.yml
assets/: index-BGOX-lc-.js  index-CSICFkTr.css
doc/: architecture.md  contributing.md  deployment.md  macos-code-signing.md  modules.md
doc/adr/: 001-vanilla-javascript.md  002-tauri-desktop.md  003-dompurify-sanitization.md  template.md
doc/eml/: mock_email_1.eml  mock_email_2.eml  mock_email_3.eml  mock_email_4.eml  mock_email_scenario_a_related.eml  mock_email_scenario_b_whitespace.eml  mock_email_scenario_c_base64.eml  multipart_nested.eml  (+2 more)
script/: generate_bulk_emails.py  generate_mock_emails.py
src/: msgreader.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: FileHandler.test.js  KeyboardManager.test.js  MessageHandler.test.js  SearchManager.test.js  ThemeManager.test.js  UIManager.test.js  addressUtils.test.js  bulkExport.test.js  cidReplacer.test.js  colorUtils.test.js  constants.test.js  encoding.test.js  helpers.test.js  messageExport.test.js  sanitizer.test.js  setup.js  storage.test.js  tauriBridge.test.js  utils.test.js
(+48 files in other folders)
